サイドバーに独自で作った画面を追加

--- a/Shared/Resources/Lang.resx
+++ b/Shared/Resources/Lang.resx
@@ -173,4 +173,8 @@
     <value>Fetch data</value>
     <comment/>
   </data>
+  <data name="sidemenu_role" xml:space="preserve">
+    <value>Role</value>
+    <comment/>
+  </data>
 </root>
