--- a/Shared/Resources/Lang.ja.resx
+++ b/Shared/Resources/Lang.ja.resx
@@ -173,4 +173,8 @@
     <value>フェッチデータ</value>
     <comment/>
   </data>
+  <data name="sidemenu_role" xml:space="preserve">
+    <value>権限</value>
+    <comment/>
+  </data>
 </root>
